# Rust-practice

./: Cargo.toml
src/: 02_error_handling.rs  03_async.rs  05_regex.rs  06_swc.rs  advanced_examples.rs  cli_examples.rs  collections.rs  file_io.rs  generics_traits.rs  learning_main.rs  main.rs  testing.rs
tests/: integration_test.rs
