[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "advanced"
path = "src/advanced_examples.rs"

[[bin]]
name = "learning"
path = "src/learning_main.rs"

[dependencies]
# 비동기 프로그래밍
tokio = { version = "1", features = ["full"], optional = true }

# 정규표현식
regex = { version = "1", optional = true }

# CLI 도구 개발
clap = { version = "4", features = ["derive"], optional = true }

# SWC (JavaScript/TypeScript 파서)
swc_ecma_ast = { version = "1", optional = true }
swc_ecma_parser = { version = "1", optional = true }
swc_ecma_visit = { version = "1", optional = true }
swc_ecma_codegen = { version = "1", optional = true }
swc_common = { version = "1", optional = true }

# 로깅
env_logger = { version = "0.11", optional = true }
log = { version = "0.4", optional = true }

# 유틸리티
once_cell = { version = "1", optional = true }

[features]
default = []
full = ["dep:tokio", "dep:regex", "dep:clap", "dep:swc_ecma_ast", "dep:swc_ecma_parser", "dep:swc_ecma_visit", "dep:swc_ecma_codegen", "dep:swc_common", "dep:env_logger", "dep:log", "dep:once_cell"]
async = ["dep:tokio"]
regex = ["dep:regex"]
clap = ["dep:clap"]
swc = ["dep:swc_ecma_ast", "dep:swc_ecma_parser", "dep:swc_ecma_visit", "dep:swc_ecma_codegen", "dep:swc_common"]
